@@ -477,7 +477,7 @@ class MenuBar
 		$menuList["individual"] = $pgv_lang["individual_list"];
 		if (file_exists("famlist.php")) $menuList["family"] = $pgv_lang["family_list"];
 		if (!$surname && file_exists("sourcelist.php") && $SHOW_SOURCES>=PGV_USER_ACCESS_LEVEL) $menuList["source"] = $pgv_lang["source_list"];
-		if (!$surname && file_exists("shnotelist.php") && $SHOW_SOURCES>=PGV_USER_ACCESS_LEVEL) $menuList["shnote"] = $pgv_lang["shared_note_list"];
+		if (!$surname && file_exists("notelist.php") && $SHOW_SOURCES>=PGV_USER_ACCESS_LEVEL) $menuList["shnote"] = $pgv_lang["shared_note_list"];
 		if (!$surname && file_exists("repolist.php")) $menuList["repository"] = $pgv_lang["repo_list"];
 		if (!$surname && file_exists("placelist.php")) $menuList["places"] = $pgv_lang["place_list"];
 		if (!$surname && file_exists("medialist.php") && $MULTI_MEDIA) $menuList["media"] = $pgv_lang["media_list"];
@@ -520,7 +520,7 @@ class MenuBar
 
 			case "shnote":
 				//-- shared note
-				$submenu = new Menu($pgv_lang["shared_note_list"], encode_url('shnotelist.php?ged='.$GEDCOM));
+				$submenu = new Menu($pgv_lang["shared_note_list"], encode_url('notelist.php?ged='.$GEDCOM));
 				if (!empty($PGV_IMAGES["notes"]["small"]))
 					$submenu->addIcon($PGV_IMAGE_DIR."/".$PGV_IMAGES["notes"]["small"]);
 				$submenu->addClass("submenuitem$ff", "submenuitem_hover$ff");
