@@ -55,7 +55,7 @@ echo 'function show_gedcom_record() {';
 echo ' var recwin=window.open("gedrecord.php?pid=', $controller->nid, '", "_blank", "top=0,left=0,width=600,height=400,scrollbars=1,scrollable=1,resizable=1");';
 echo '}';
 echo 'function showchanges() {';
-echo ' window.location="shnote.php?nid=', $controller->nid, '&show_changes=yes"';
+echo ' window.location="note.php?nid=', $controller->nid, '&show_changes=yes"';
 echo '}';
 echo 'function edit_shnote() {';
 echo ' var win04 = window.open("edit_interface.php?action=editshnote&pid='.$linkToID.'", "win04", "top=70,left=70,width=620,height=500,resizable=1,scrollbars=1");';
